--- a/index.html
+++ b/index.html
@@ -147,7 +147,15 @@
         <div id="removePopup" class="popup">
             <h3>Remove Task</h3>
             <table id="popupTable">
-                <thead></thead>
+                <thead>
+                    <th>Employee ID</th>
+                    <th>Employee Name</th>
+                    <th>Task Description</th>
+                    <th>Start Date</th>
+                    <th>End Date</th>
+                    <th>Rating</th>
+                    <th>Remarks</th>
+                </thead>
                 <tbody id="popupTaskList">
                     <!-- Tasks will be populated here -->
                 </tbody>
