--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 document.getElementById('messagePopup').style.display = 'block';
             }
         };
-ffunction populatePopupTable() {
+function populatePopupTable() {
     const tableBody = document.querySelector('#cardContainer table tbody');
     const popupTaskList = document.getElementById('popupTaskList');
 
