--- a/index.html
+++ b/index.html
@@ -289,30 +289,32 @@ function populatePopupTable() {
     });
 }
 function removeTask(employeeName, taskDescription) {
-    const apiUrl = 'https://oje3cr7sy2.execute-api.ap-south-1.amazonaws.com/V1/RemoveTask';  // Replace with your API Gateway URL
+    const apiUrl = 'https://oje3cr7sy2.execute-api.ap-south-1.amazonaws.com/V1/RemoveTask';
+    
+    // Construct a plain text string with comma-separated values
+    const plainText = `${employeeName},${taskDescription}`;
 
     fetch(apiUrl, {
         method: 'DELETE',
         headers: {
-            'Content-Type': 'application/json',
+            'Content-Type': 'text/plain',  // Indicate that you're sending plain text
         },
-        body: JSON.stringify({ employeeName, taskDescription })
+        body: plainText  // Send the plain text as the body
     })
     .then(response => response.json())
     .then(data => {
         if (data.success) {
             alert('Task removed successfully');
-            fetchTasksForEmployee(employeeId); // Refresh the task list
-            closePopup('removePopup');
         } else {
-            alert('Error removing task: ' + data.error);
+            alert('Error: ' + data.error);
         }
     })
     .catch(error => {
-        console.error('Error removing task:', error);
-        alert('Error removing task');
+        console.error('Error:', error);
+        alert('Request failed');
     });
 }
+
 </script>
 </body>
 </html>
