--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ function removeTask(employeeName, taskDescription) {
     const apiUrl = 'https://oje3cr7sy2.execute-api.ap-south-1.amazonaws.com/V1/RemoveTask';
     
     // Construct a plain text string with comma-separated values
-     const plainText = ${employeeName},${Task_Description};
+    const plainText = ${employeeName},${taskDescription};
 
     fetch(apiUrl, {
         method: 'DELETE',
@@ -313,7 +313,7 @@ function removeTask(employeeName, taskDescription) {
         console.error('Error:', error);
         alert('Request failed');
     });
-} 
+}
 </script>
 </body>
 </html>
