--- a/index.html
+++ b/index.html
@@ -288,32 +288,38 @@ function populatePopupTable() {
         popupTaskList.appendChild(clonedRow);
     });
 }
-function removeTask(employeeName, taskDescription) {
+const removeTask = async (employeeName, taskDescription) => {
     const apiUrl = 'https://oje3cr7sy2.execute-api.ap-south-1.amazonaws.com/V1/RemoveTask';
     
-    // Construct a plain text string with comma-separated values
-    const plainText = ${employeeName},${taskDescription};
+    // Construct a plain text string with comma-separated values using backticks
+    const plainText = `${employeeName},${taskDescription}`;
 
-    fetch(apiUrl, {
-        method: 'DELETE',
-        headers: {
-            'Content-Type': 'text/plain',  // Indicate that you're sending plain text
-        },
-        body: plainText  // Send the plain text as the body
-    })
-    .then(response => response.json())
-    .then(data => {
+    try {
+        const response = await fetch(apiUrl, {
+            method: 'DELETE',
+            headers: {
+                'Content-Type': 'text/plain',  // Indicate that you're sending plain text
+            },
+            body: plainText  // Send the plain text as the body
+        });
+
+        // Ensure the response is in the expected format
+        if (!response.ok) {
+            throw new Error('Network response was not ok: ' + response.statusText);
+        }
+
+        const data = await response.json();
         if (data.success) {
             alert('Task removed successfully');
+            // Optionally, refresh the task list here
         } else {
             alert('Error: ' + data.error);
         }
-    })
-    .catch(error => {
+    } catch (error) {
         console.error('Error:', error);
         alert('Request failed');
-    });
-}
+    }
+};
 </script>
 </body>
 </html>
