--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             const confirmRemove = confirm(`Are you sure you want to remove the task: "${taskDescription}" for employee: "${employeeName}"?`);
             if (confirmRemove) {
                 // Make a request to the AWS Lambda to remove the task
-                fetch(' https://oje3cr7sy2.execute-api.ap-south-1.amazonaws.com/V1/RemoveTask', {
+                fetch('  https://x494duso0d.execute-api.ap-south-1.amazonaws.com/default/RemoveTask', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
