--- a/index.html
+++ b/index.html
@@ -277,33 +277,33 @@ function populatePopupTable() {
     popupTaskList.innerHTML = '';
 
     const rows = tableBody.querySelectorAll('tr');
-    rows.forEach((row, index) => {
+    rows.forEach(row => {
         const clonedRow = row.cloneNode(true);
         const removeButtonCell = document.createElement('td');
 
-        // Add the remove button for every row
-        removeButtonCell.innerHTML = `<button class="button" onclick="removeTask(${index})">X</button>`;
+        const taskDescription = clonedRow.children[2].innerText; // Assuming task description is in the third column
+
+        removeButtonCell.innerHTML = `<button class="button" onclick="removeTask('${taskDescription}')">X</button>`;
         
         clonedRow.appendChild(removeButtonCell);
         popupTaskList.appendChild(clonedRow);
     });
 }
-const removeTask = async (Employee_Name, Task_Description) => {
+const removeTask = async (taskDescription) => {
     const apiUrl = 'https://oje3cr7sy2.execute-api.ap-south-1.amazonaws.com/V1/RemoveTask';
     
-    // Construct a plain text string with comma-separated values using backticks
-    const plainText = `${Employee_Name},${Task_Description}`;
+    // Construct a plain text string with the task description
+    const plainText = `${taskDescription}`;
 
     try {
         const response = await fetch(apiUrl, {
             method: 'DELETE',
             headers: {
-                'Content-Type': 'text/plain',  // Indicate that you're sending plain text
+                'Content-Type': 'text/plain',
             },
-            body: plainText  // Send the plain text as the body
+            body: plainText
         });
 
-        // Ensure the response is in the expected format
         if (!response.ok) {
             throw new Error('Network response was not ok: ' + response.statusText);
         }
@@ -311,7 +311,7 @@ const removeTask = async (Employee_Name, Task_Description) => {
         const data = await response.json();
         if (data.success) {
             alert('Task removed successfully');
-            // Optionally, refresh the task list here
+            fetchTasksForEmployee(employeeId); // Refresh task list
         } else {
             alert('Error: ' + data.error);
         }
@@ -319,6 +319,7 @@ const removeTask = async (Employee_Name, Task_Description) => {
         console.error('Error:', error);
         alert('Request failed');
     }
+};
 };
 </script>
 </body>
