--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         }
     </style>
 </head>
-<body onload="loadAllTasks()">
+<body>
     <header>
         <img src="https://www.bharatbiotech.com/images/bharat-biotech-logo.jpg" alt="Company Logo" class="logo">
     </header>
@@ -97,7 +97,7 @@
     <div class="container">
         <form id="employeeForm">
             <label for="employeeID">Enter Employee ID:</label>
-            <input type="text" id="employeeID" name="employeeID">
+            <input type="text" id="employeeID" name="employeeID" required>
             <button type="submit">Fetch Tasks</button>
         </form>
         <div id="cardContainer">
@@ -119,28 +119,7 @@
     
     <!-- Overlay for popup -->
     <div id="overlay" class="overlay" onclick="closePopup()"></div>
-
 <script>
-    // Fetch and display all tasks when the page loads
-    function loadAllTasks() {
-        fetch('https://imf44ag3d4.execute-api.ap-south-1.amazonaws.com/S1/Test5')  // Adjust this URL to fetch all tasks
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                return response.text();
-            })
-            .then(data => {
-                document.getElementById('cardContainer').innerHTML = data;
-                document.getElementById('editButton').style.display = data.trim() ? 'block' : 'none';
-            })
-            .catch(error => {
-                console.error('Error fetching data:', error);
-                document.getElementById('cardContainer').innerHTML = '<p>Error fetching tasks. Please try again later.</p>';
-            });
-    }
-
-    // Fetch tasks for a specific Employee ID
     document.getElementById('employeeForm').addEventListener('submit', function(event) {
         event.preventDefault();
 
@@ -214,52 +193,80 @@
         document.getElementById('editPopup').style.display = 'block';
         document.getElementById('overlay').style.display = 'block';
     }
+       function saveChanges() {
+    var rows = document.querySelectorAll('#popupContent table tbody tr');
+    var tasksData = [];
 
-    function saveChanges() {
-        var rows = document.querySelectorAll('#popupContent table tbody tr');
-        var tasksData = [];
+    rows.forEach(row => {
+        var employeeId = row.cells[0].innerText; // Assuming employee ID is in the first column
+        var taskDescription = row.cells[2].innerText; // Task description in the third column
+        var rate = row.querySelector('.rateInput').value.trim();
+        var remarks = row.querySelector('.remarkInput').value.trim();
 
-        rows.forEach(row => {
-            var employeeId = row.cells[0].innerText; // Assuming employee ID is in the first column
-            var taskDescription = row.cells[2].innerText; // Task description in the third column
-            var rate = row.querySelector('.rateInput').value.trim();
-            var remarks = row.querySelector('.remarkInput').value.trim();
-
-            // Push to tasksData array if all fields are filled
-            if (employeeId && taskDescription && rate && remarks) {
-                tasksData.push(`${employeeId},${taskDescription},${rate},${remarks}`);
-            }
-        });
-
-        if (tasksData.length === 0) {
-            alert('Please complete all fields before saving.');
-            return;
+        // Push to tasksData array if all fields are filled
+        if (employeeId && taskDescription && rate && remarks) {
+            tasksData.push(`${employeeId},${taskDescription},${rate},${remarks}`);
         }
+    });
 
-        fetch('https://imf44ag3d4.execute-api.ap-south-1.amazonaws.com/S1/Test1', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ tasks: tasksData })
-        })
-        .then(response => response.json())
-        .then(data => {
-            if (data.success) {
-                alert('Tasks updated successfully.');
-                closePopup();
-                loadAllTasks(); // Reload the task list to reflect the changes
-            } else {
-                alert('Failed to update tasks. Please try again.');
-            }
-        })
-        .catch(error => {
-            console.error('Error updating tasks:', error);
-            alert('An error occurred while updating tasks.');
-        });
+    if (tasksData.length === 0) {
+        alert("Please fill in all fields before saving.");
+        return;
     }
+
+    // Send data to Lambda
+    fetch('https://tfyct2zj8k.execute-api.ap-south-1.amazonaws.com/A1/test3', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'text/plain'
+        },
+        body: tasksData.join('\n') // Join tasks data with new lines
+    })
+    .then(response => {
+        if (!response.ok) {
+            throw new Error('Network response was not ok');
+        }
+        return response.json();
+    })
+    .then(data => {
+        console.log('Success:', data);
+        alert('Tasks updated successfully!');
+        closePopup(); // Close the popup on success
+    })
+    .catch((error) => {
+        console.error('Error:', error);
+        alert('Failed to update tasks: ' + error.message);
+    });
+}
+
 
     function closePopup() {
         document.getElementById('editPopup').style.display = 'none';
         document.getElementById('overlay').style.display = 'none';
+        
+        // Call the function to load and display tasks
+        loadTasks();
+    }
+
+    function loadTasks() {
+        const employeeID = document.getElementById('employeeID').value.trim(); // Get the current employee ID
+        fetch(`https://imf44ag3d4.execute-api.ap-south-1.amazonaws.com/S1/Test5?EmployeeID=${encodeURIComponent(employeeID)}`)
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.text(); // Use text instead of json
+            })
+            .then(data => {
+                document.getElementById('cardContainer').innerHTML = data;
+
+                // Show the "Edit" button if there are tasks
+                document.getElementById('editButton').style.display = data.trim() ? 'block' : 'none';
+            })
+            .catch(error => {
+                console.error('Error loading tasks:', error);
+                alert('Failed to load tasks: ' + error.message);
+            });
     }
 </script>
 </body>
